src/main/kubernetes/client-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grpc-client
  name: grpc-client
  namespace: grpc-istio
spec:
  selector:
    matchLabels:
      app: grpc-client
  template:
    metadata:
      annotations:
        inject.istio.io/templates: 'grpc-agent'
        proxy.istio.io/config: '{"holdApplicationUntilProxyStarts": true}'
      labels:
        app: grpc-client
    spec:
      containers:
      - image: grpc-test-grpc-client:latest
        imagePullPolicy: Never
        name: grpc-client
        ports:
        - containerPort: 8080
          name: app-port
        - containerPort: 5005
          name: debug-port
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: grpc-client
  name: grpc-client
  namespace: grpc-istio
spec:
  ports:
  - appProtocol: http
    port: 8080
    protocol: TCP
    targetPort: app-port
    name: app
  - appProtocol: http
    port: 5005
    protocol: TCP
    targetPort: debug-port
    name: debugger
  selector:
    app: grpc-client
  type: ClusterIP
